# OpenRGB-amBX-Plugin

./: .gitignore  CMakeLists.txt  README.md  amBXPlugin.json
src/: AMBXController.cpp  AMBXController.h  AMBXNativeWrapper.cpp  CMakeLists.txt  amBXPlugin.cpp  amBXPlugin.h
